# score-addon-videomapping

./: CMakeLists.txt  score_addon_particles.cpp  score_addon_particles.hpp
Mesh/: Executor.cpp  Executor.hpp  Layer.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
Particles/: ParticleNode.cpp  ParticleNode.hpp
